    for old scripts via procedures in the TclX library.
-------------------------------------------------------------------------------
19 Oct 96:
  o Modified to build pkgIndex.tcl files and install them so that Tcl
    auto_loading will find them.
  o Removed --arch configure option.  With new pkgIndex.tcl changes, its not
    much good unless Tcl and Tk supported it.
===============================================================================
20 Oct 96: Released TclX 7.6.0 Beta 2
===============================================================================
15 Nov 96:
  o Major clean up of shared library build, including fixes from Jan Nijtmans'
    <nijtmans@nici.kun.nl> TclX plus patch.
  o More work on Windows port, including make from a single makefile and
    install rules.
-------------------------------------------------------------------------------
17 Nov 96:
  o pkgIndex.tcl files now works relative to $dir, so they can be moved.
  o libtclx and libtkx now use the same alogrithm for naming that includes the
    version number as Tcl and Tk.
===============================================================================
20 Nov 96: Released TclX 7.6.0, including Win 95/NT binary distribution.
===============================================================================
30 Nov 96:
  o Fixed crash with profile when run with ITcl.  Patch supplied by Christopher
    Hylands <cxh@EECS.Berkeley.EDU>.
-------------------------------------------------------------------------------
17 Dec 96:
  o Fixed bug that caused some scanmatch regular expression to fail to match
    due to problems with the BoyerMoore pre-parse.
-------------------------------------------------------------------------------
20 Dec 96:
  o Fixed bug that caused intersect3 to return bogus results if a list item
    was duplicated in the second list.
-------------------------------------------------------------------------------

 