@@ -157,7 +157,7 @@ WHERE TO GET IT
 
 Extended Tcl 7.6.0 can be downloaded by anonymous FTP from:
 
-   ftp.neosoft.com:/pub/tcl/tclx-distrib/tclX7.6.0.tar.gz
+   ftp.neosoft.com:/pub/tcl/TclX/tclX7.6.0.tar.gz
 
 A contributed sources archive resides on ftp.aud.alcatel.com and
 is mirrored on ftp.ibp.fr for our friends in Europe.  An Frequently
