@@ -12,7 +12,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: file.test,v 1.3 1996/11/04 17:08:18 markd Exp $
+# $Id: file.test,v 8.0 1996/11/21 00:25:11 markd Exp $
 #------------------------------------------------------------------------------
 #
 
@@ -115,8 +115,14 @@ Test file-compat-3.4 {unlink tests} {
     mkdir UNLINK2.TMP
     link -sym UNLINK2.TMP UNLINK3.TMP
     unlink UNLINK3.TMP
-    file exists UNLINK3.TMP
-} 0 0 {unixOnly}
+    catch {file readlink UNLINK3.TMP}
+} 0 1 {unixOnly}
+
+Test file-compat-3.5 {unlink tests} {
+    link -sym UNLINK100.TMP UNLINK3.TMP
+    unlink UNLINK3.TMP
+    catch {file readlink UNLINK3.TMP}
+} 0 1 {unixOnly}
 
 Test file-compat-4.1 {frename tests} {
     close [open FRENAME1.TMP w]
